2011-02-18  Philippe Normand  <pnormand@igalia.com>

Unreviewed, rolling out r78979.
        http://trac.webkit.org/changeset/78979
        https://bugs.webkit.org/show_bug.cgi?id=53146

        causes multiple crashes on GTK

        * platform/gtk/accessibility/combo-box-collapsed-selection-changed-expected.txt: Removed.
        * platform/gtk/accessibility/combo-box-collapsed-selection-changed.html: Removed.
2011-02-18  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, rolling out r78979.
        http://trac.webkit.org/changeset/78979
        https://bugs.webkit.org/show_bug.cgi?id=53146

        causes multiple crashes on GTK

        * accessibility/gtk/AXObjectCacheAtk.cpp:
        (WebCore::notifyChildrenSelectionChange):
        (WebCore::AXObjectCache::postPlatformNotification):

Canonical link: https://commits.webkit.org/68942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78987 268f45cc-cd09-0410-ab3c-d52691b4dbfc